# qvac-ext-bergamot-translator

./: .gitmodules  CMakeLists.txt  README.md  bergamot_translatorConfig.cmake.in
.github/: CODEOWNERS
.github/workflows/: approval-worker.yml  check-pending-approval.yml  security-baseline.yml
src/tests/: intgemm-resolve.cpp
src/translator/: CMakeLists.txt  byte_array_util.cpp  html.cpp  html.h  logging.h  parser.h  service.cpp  translation_model.cpp
